--- a/class8-Modifying_inline_styling-CipherSchools.html.html
+++ b/class8-Modifying_inline_styling-CipherSchools.html.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modifying attributes in Javascript</title>
+    <title>Modifying inline Styling in Javascript</title>
 </head>
 <body>
     <header class="header-content container" id="header">
@@ -17,7 +17,7 @@
         <p>This is the main three</p>
         <p>This is the main four</p>
     </main>
-    <footer>This is the footer</footer>
-    <script src="class7.js"></script>
+    <footer style = "border: 2px solid green">This is the footer</footer>
+    <script src="class8.js"></script>
 </body>
 </html>
