--- a/class23-Date&Time_in_JS-CipherSchools.html
+++ b/class23-Date&Time_in_JS-CipherSchools.html
@@ -7,6 +7,6 @@
     <title>Date & Time in Javascript</title>
 </head>
 <body>
-    <script src="class23.js"></script>
+    <script src="Class23.js"></script>
 </body>
 </html>
