--- a/Class11-Types_of_variable_var,let&const-CipherSchools.html
+++ b/Class11-Types_of_variable_var,let&const-CipherSchools.html
@@ -12,6 +12,6 @@
         <div class="up-container">jhvjhvj</div>
         <div class="bottom-container">hbjbj</div>
     </div>
-    <script src="class11.js"></script>
+    <script src="Class11.js"></script>
 </body>
 </html>
