--- a/Class9-Adding_DOM_Elements-CipherSchools.html
+++ b/Class9-Adding_DOM_Elements-CipherSchools.html
@@ -18,6 +18,6 @@
         <p>This is the main four</p>
     </main>
     <footer style = "border: 2px solid green">This is the footer</footer>
-    <script src="class9.js"></script>
+    <script src="Class9.js"></script>
 </body>
 </html>
