--- a/class13-Operators_in_JS-CipherSchools.html
+++ b/class13-Operators_in_JS-CipherSchools.html
@@ -7,7 +7,7 @@
     <title>Operators in Javascript</title>
 </head>
 <body>
-    <script src="class13.js">
+    <script src="Class13.js">
     </script>
 </body>
 </html>
