--- a/class15,16,17-Objects_in_JS-CipherSchools.html
+++ b/class15,16,17-Objects_in_JS-CipherSchools.html
@@ -7,6 +7,6 @@
     <title>Objects in Javascript</title>
 </head>
 <body>
-    <script src="class15,16,17.js"></script>
+    <script src="Class15,16,17.js"></script>
 </body>
 </html>
