--- a/class3-js-CipherSchools.html
+++ b/class3-js-CipherSchools.html
@@ -33,6 +33,6 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <script src="class3.js"></script>
+    <script src="Class3.js"></script>
 </body>
 </html>
