--- a/class5-Accessing_elements_in_js-CipherSchools.html
+++ b/class5-Accessing_elements_in_js-CipherSchools.html
@@ -11,13 +11,13 @@
         <p>Welcome!</p>
     </header>
     <main>
-        <img src="image_food.jpg" alt="" width="200px">
+        <img src="guruji.jpg" alt="" width="200px">
         <p>This is the main</p>
         <p>This is the main two</p>
         <p>This is the main three</p>
         <p>This is the main four</p>
     </main>
     <footer>This is the footer</footer>
-    <script src="class5.js"></script>
+    <script src="Class5.js"></script>
 </body>
 </html>
