--- a/class7-Modifying_attributes-CipherSchools.html
+++ b/class7-Modifying_attributes-CipherSchools.html
@@ -18,6 +18,6 @@
         <p>This is the main four</p>
     </main>
     <footer>This is the footer</footer>
-    <script src="class7.js"></script>
+    <script src="Class7.js"></script>
 </body>
 </html>
