--- a/class6-modifying_class-CipherSchools.html
+++ b/class6-modifying_class-CipherSchools.html
@@ -18,6 +18,6 @@
         <p>This is the main four</p>
     </main>
     <footer>This is the footer</footer>
-    <script src="class6.js"></script>
+    <script src="Class6.js"></script>
 </body>
 </html>
